fix: reduce gap between desktop experience icon and description

--- a/src/style.css
+++ b/src/style.css
@@ -907,7 +907,6 @@ footer p {
 
   .experience-for-desktop {
     width: 1300px;
-    gap: 25px;
   }
 
   .company-logo {
